# bot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.MD  Dockerfile  FUNDING.yml  GramAddict.py  LICENSE  Pipfile  README.md  action_get_my_username.py  action_handle_blogger.py  action_unfollow.py  blacklist.example  docker-entrypoint.sh  filter.dis  filter.example  filter.json  insomniac.py  pyproject.toml  requirements.txt  requirements_screen_record.txt  run.py  server-restart.py  session_state.py  setup-beta.py  setup.py  storage.py  test.txt  urls.txt  utils.py
  testatore.seriale/: filter__.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  code-checker.yml  codeql-analysis.yml  deploy.yml  lint.yml  pyflakes.yml
GramAddict/: __init__.py  __main__.py  version.py
GramAddict/core/: bot_flow.py  config.py  decorators.py  device_facade.py  download_from_github.py  filter.py  handle_sources.py  interaction.py  log.py  navigation.py  persistent_list.py  plugin_loader.py  report.py  resources.py  scroll_end_detector.py  session_state.py  (+3 more)
config-examples/: all-parameters.yml  comments_list.txt  config.yml  filter.json  filters.yml  pm_list.txt  telegram.yml
res/: README_es.md  README_pt_BR.md
src/: action_get_my_profile_info.py  action_get_my_username.py  action_handle_blogger.py  action_handle_hashtag.py  action_remove_mass_followers.py  action_unfollow.py  analytics.py  counters_parser.py  device_facade.py  filter.py  globals.py  interaction.py  interaction_rect_checker.py  language_switcher.py  layout.py  navigation.py  persistent_list.py  report.py  scroll_end_detector.py  session_state.py  storage.py  utils.py
test/: test_load_txt.py  test_telegram.py
(+26 files in other folders)
